; ModuleID = '/home/carl/AnghaBench/libgit2/tests/reset/extr_soft.c_test_reset_soft__resetting_against_an_unborn_head_repo_makes_the_head_no_longer_unborn.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/reset/extr_soft.c_test_reset_soft__resetting_against_an_unborn_head_repo_makes_the_head_no_longer_unborn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@target = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@KNOWN_COMMIT_IN_BARE_REPO = common dso_local global i32 0, align 4
@NON_EXISTING_HEAD = common dso_local global i32 0, align 4
@GIT_RESET_SOFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_reset_soft__resetting_against_an_unborn_head_repo_makes_the_head_no_longer_unborn() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @repo, align 4
  %3 = load i32, i32* @KNOWN_COMMIT_IN_BARE_REPO, align 4
  %4 = call i32 @git_revparse_single(i32* @target, i32 %2, i32 %3)
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32, i32* @repo, align 4
  %7 = load i32, i32* @NON_EXISTING_HEAD, align 4
  %8 = call i32 @make_head_unborn(i32 %6, i32 %7)
  %9 = load i32, i32* @repo, align 4
  %10 = call i32 @git_repository_head_unborn(i32 %9)
  %11 = call i32 @cl_assert_equal_i(i32 1, i32 %10)
  %12 = load i32, i32* @repo, align 4
  %13 = load i32, i32* @target, align 4
  %14 = load i32, i32* @GIT_RESET_SOFT, align 4
  %15 = call i32 @git_reset(i32 %12, i32 %13, i32 %14, i32* null)
  %16 = call i32 @cl_git_pass(i32 %15)
  %17 = load i32, i32* @repo, align 4
  %18 = call i32 @git_repository_head_unborn(i32 %17)
  %19 = call i32 @cl_assert_equal_i(i32 0, i32 %18)
  %20 = load i32, i32* @repo, align 4
  %21 = load i32, i32* @NON_EXISTING_HEAD, align 4
  %22 = call i32 @git_reference_lookup(i32** %1, i32 %20, i32 %21)
  %23 = call i32 @cl_git_pass(i32 %22)
  %24 = load i32*, i32** %1, align 8
  %25 = call i32 @git_reference_target(i32* %24)
  %26 = load i32, i32* @KNOWN_COMMIT_IN_BARE_REPO, align 4
  %27 = call i32 @git_oid_streq(i32 %25, i32 %26)
  %28 = call i32 @cl_assert_equal_i(i32 0, i32 %27)
  %29 = load i32*, i32** %1, align 8
  %30 = call i32 @git_reference_free(i32* %29)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_revparse_single(i32*, i32, i32) #1

declare dso_local i32 @make_head_unborn(i32, i32) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_repository_head_unborn(i32) #1

declare dso_local i32 @git_reset(i32, i32, i32, i32*) #1

declare dso_local i32 @git_reference_lookup(i32**, i32, i32) #1

declare dso_local i32 @git_oid_streq(i32, i32) #1

declare dso_local i32 @git_reference_target(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
